# common_functions

./: .gitignore  Makefile.in  config.status  configure  configure.ac  libtool
include/: Makefile.am  Makefile.in  string_to_int.h  string_to_unsigned_int.h  strlcat.h  strlcpy.h
src/: .gitignore  Makefile.am  Makefile.in  string_to_int.c  string_to_unsigned_int.c  strlcat.c  strlcpy.c
